# LocalAdminSnap

./: LICENSE  README.md  pyproject.toml
src/LocalAdminSnap/: main.py
