[project]
name = "LocalAdminSnap"
version = "0.0.1"
authors = [
  { name="rjchiba", email="ryuji.chiba.5185@gmai.com" },
]
description = "Manage shapshots of local administration and visualization"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
