[project]
name = "LocalAdminSnap"
version = "0.0.1"
authors = [
  { name="rjchiba", email="ryuji.chiba.5185@gmai.com" },
]
description = "Manage snapshots of local administration and visualization"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/RjChiba/LocalAdminSnap"
"Bug Tracker" = "https://github.com/RjChiba/LocalAdminSnap/issues"
